data/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>D365SpecialEventsGUID__c</fullName>
        <externalId>true</externalId>
        <label>D365SpecialEventsGUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Energy_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Energy Program</label>
        <referenceTo>Energy_Program__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Literature_Invite_Created__c</fullName>
        <label>Event Literature Invite Created</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Special Events</relationshipLabel>
        <relationshipName>Special_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Phone_Number__c</fullName>
        <label>Event Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Event_Street_Address__c</fullName>
        <label>Event Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Website__c</fullName>
        <label>Event Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Materials__c</fullName>
        <label>Materials</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_Attending__c</fullName>
        <label>Number Attending</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Registration_Deadline__c</fullName>
        <label>Registration Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Website__c</fullName>
        <label>Registration Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Second_Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Salesperson</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Special Events</relationshipLabel>
        <relationshipName>Special_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Nights__c</fullName>
        <label>Total Nights</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Event_Location__c</columns>
        <columns>Venue__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Total_Nights__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Active Special Events</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>